# rtp-based-secure-client-server

./: .gitignore  BUILDING.md  CMakeLists.txt  README.md  TODO.md  conanfile.py  dev-shell.nix  shell.nix
cmake/: FindLibevent.cmake
src/: CMakeLists.txt  client.c  log.h  rtp.c  rtp.h  rtp_err.h  rtp_session.c  rtp_session.h  rtp_src.h  rtp_util.c  rtp_util.h  server.c
test/: CMakeLists.txt  test_header_serialize.c
